remove JLA